@@ -15,7 +15,6 @@
  */
 package org.talend.sdk.component.runtime.beam.spi.record;
 
-import static java.util.stream.Collectors.toList;
 import static lombok.AccessLevel.PRIVATE;
 
 import java.util.List;
@@ -41,6 +40,6 @@ public class SchemaIdGenerator {
                                 .stream()
                                 .map(it -> new Schema.Field(it.name(), it.schema(), it.doc(), it.defaultVal(),
                                         it.order()))
-                                .collect(toList())));
+                                .toList()));
     }
 }
