@@ -16,7 +16,6 @@
 package org.talend.sdk.component.runtime.beam.transform.avro;
 
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 
 import javax.json.JsonArray;
 import javax.json.JsonNumber;
@@ -98,7 +97,7 @@ public class SchemalessJsonToIndexedRecord extends PTransform<PCollection<JsonOb
                             .stream()
                             .map(it -> new Schema.Field(it.getKey(),
                                     guessSchema(buildNextName(recordName, it.getKey()), it.getValue()), null, null))
-                            .collect(toList()));
+                            .toList());
                     return record;
                 case ARRAY:
                     final JsonArray array = element.asJsonArray();
