@@ -72,7 +72,7 @@ class RecordBuilderImplTest {
         Schema.EntriesOrder e = Schema.EntriesOrder.of(new RecordImpl.BuilderImpl().getCurrentEntries()
                 .stream()
                 .map(Schema.Entry::getName)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Test
@@ -862,14 +862,14 @@ class RecordBuilderImplTest {
         // Then order is preserved in the builder
         Assertions.assertEquals(3, builder.getCurrentEntries().size());
         final List<String> builderEntriesName =
-                builder.getCurrentEntries().stream().map(Entry::getName).collect(Collectors.toList());
+                builder.getCurrentEntries().stream().map(Entry::getName).toList();
         assertEquals(Arrays.asList("firstColumn_renamed", "secondColumn", "thirdColumn"), builderEntriesName);
 
         // Then order is also preserved in the built Record
         final Record outputRecord = builder.build();
         final Schema outputRecordSchema = outputRecord.getSchema();
         final List<String> outputEntriesName =
-                outputRecordSchema.getEntriesOrdered().stream().map(Schema.Entry::getName).collect(Collectors.toList());
+                outputRecordSchema.getEntriesOrdered().stream().map(Schema.Entry::getName).toList();
 
         assertEquals(Arrays.asList("firstColumn_renamed", "secondColumn", "thirdColumn"), outputEntriesName);
     }
