@@ -416,13 +416,13 @@ public class ComponentManager implements AutoCloseable {
         final ClassLoader tccl = Thread.currentThread().getContextClassLoader();
 
         internationalizationServiceFactory = new InternationalizationServiceFactory(getLocalSupplier());
-        customizers = toStream(loadServiceProviders(Customizer.class, tccl)).collect(toList()); // must stay first
+        customizers = toStream(loadServiceProviders(Customizer.class, tccl)).toList(); // must stay first
         if (!customizers.isEmpty()) {
             customizers.forEach(c -> c.setCustomizers(customizers));
         }
         if (!Boolean.getBoolean("talend.component.manager.classpathcontributor.skip")) {
             classpathContributors =
-                    toStream(loadServiceProviders(ContainerClasspathContributor.class, tccl)).collect(toList());
+                    toStream(loadServiceProviders(ContainerClasspathContributor.class, tccl)).toList();
         } else {
             classpathContributors = emptyList();
         }
@@ -524,8 +524,8 @@ public class ComponentManager implements AutoCloseable {
         this.extensions = toStream(loadServiceProviders(ComponentExtension.class, tccl))
                 .filter(ComponentExtension::isActive)
                 .sorted(comparing(ComponentExtension::priority))
-                .collect(toList());
-        this.transformers = extensions.stream().flatMap(e -> e.getTransformers().stream()).collect(toList());
+                .toList();
+        this.transformers = extensions.stream().flatMap(e -> e.getTransformers().stream()).toList();
 
         final Iterator<RecordBuilderFactoryProvider> recordBuilderFactoryIterator =
                 ServiceLoader.load(RecordBuilderFactoryProvider.class, tccl).iterator();
@@ -742,7 +742,7 @@ public class ComponentManager implements AutoCloseable {
                         return id;
                     })
                     .filter(Objects::nonNull)
-                    .collect(toList());
+                    .toList();
         }
         return emptyList();
     }
@@ -1079,7 +1079,7 @@ public class ComponentManager implements AutoCloseable {
                 .stream()
                 .flatMap(it -> it.findContributions(pluginId).stream())
                 .distinct()
-                .collect(toList())/* keep order */;
+                .toList()/* keep order */;
     }
 
     public void removePlugin(final String id) {
@@ -1161,7 +1161,7 @@ public class ComponentManager implements AutoCloseable {
             configurations
                     .addAll(toStream(
                             loadServiceProviders(LocalConfiguration.class, LocalConfiguration.class.getClassLoader()))
-                            .collect(toList()));
+                            .toList());
         }
         configurations.addAll(asList(new LocalConfiguration() {
 
@@ -1374,7 +1374,7 @@ public class ComponentManager implements AutoCloseable {
                                 } catch (final ClassNotFoundException e) {
                                     throw new IllegalArgumentException(e);
                                 }
-                            }).collect(toList());
+                            }).toList();
                     if (KnownClassesFilter.INSTANCE == filter) {
                         archive = new ClassesArchive(/* empty */);
                         optimizedFinder = new AnnotationFinder(archive) {
@@ -1393,7 +1393,7 @@ public class ComponentManager implements AutoCloseable {
                                             .flatMap(client -> Stream
                                                     .of(client.getMethods())
                                                     .filter(m -> m.isAnnotationPresent(annotation)))
-                                            .collect(toList());
+                                            .toList();
                                 }
                                 return super.findAnnotatedMethods(annotation);
                             }
@@ -1531,7 +1531,7 @@ public class ComponentManager implements AutoCloseable {
                                         .anyMatch(a -> a.annotationType().isAnnotationPresent(ActionType.class)))
                                 .map(serviceMethod -> createServiceMeta(container, services, componentDefaults, service,
                                         instance, serviceMethod, service))
-                                .collect(toList())));
+                                .toList()));
                 info("Added @Service " + service + " for container-id=" + container.getId());
             });
 
@@ -1794,7 +1794,7 @@ public class ComponentManager implements AutoCloseable {
                     } catch (final MalformedURLException e) {
                         throw new IllegalStateException(e);
                     }
-                }).collect(toList()));
+                }).toList());
             } catch (final IOException e) {
                 throw new IllegalArgumentException("Error scanning " + module, e);
             }
