@@ -15,8 +15,6 @@
  */
 package org.talend.sdk.component.junit.environment;
 
-import static java.util.stream.Collectors.toList;
-
 import java.lang.annotation.Annotation;
 import java.util.Collection;
 import java.util.stream.Stream;
@@ -47,7 +45,7 @@ public abstract class BaseEnvironmentProvider implements EnvironmentProvider {
                                             System.clearProperty(p.value());
                                         }
                                     };
-                                }).collect(toList());
+                                }).toList();
                                 return (AutoCloseable) () -> releases.forEach(Runnable::run);
                             })
                             .orElseGet(() -> () -> {
